--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-use-googlelogin": "^0.12.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
