--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@chakra-ui/react": "^2.5.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@lottiefiles/lottie-player": "^1.7.1",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-oauth/google": "^0.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -24,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
+    "react-lottie": "^1.2.3",
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lottie": "^1.2.6",
     "tailwindcss": "^3.2.7"
   }
 }
