--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
+    "react-intersection-observer": "^9.4.3",
     "react-lottie": "^1.2.3",
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.9.0",
