--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "formik": "^2.2.9",
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0", 
+    "react-dom": "^18.2.0",
     "react-google-one-tap-login": "^0.1.1",
     "react-intersection-observer": "^9.4.3",
     "react-lottie": "^1.2.3",
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-use-googlelogin": "^0.12.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
