--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-lottie": "^1.2.3",
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-use-googlelogin": "^0.12.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
