--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-use-googlelogin": "^0.12.5",
+    "react-webcam": "^7.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
