--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-google-one-tap-login": "^0.1.1",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.4.3",
     "react-lottie": "^1.2.3",
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.9.0",
+    "react-safe": "^1.3.0",
     "react-scripts": "5.0.1",
     "react-use-googlelogin": "^0.12.5",
     "react-webcam": "^7.1.0",
@@ -62,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.6",
     "@types/react-lottie": "^1.2.6",
     "tailwindcss": "^3.2.7"
   }
