--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-pin-input": "^1.3.1",
     "react-router-dom": "^6.9.0",
     "react-safe": "^1.3.0",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "5.0.1",
     "react-use-googlelogin": "^0.12.5",
     "react-webcam": "^7.1.0",
