--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_APP_BASE_URL = https://eazyswap.herokuapp.com
+VITE_APP_BASE_URL=
 
-VITE_APP_BANK_API_KEY = PUBK_LIVE_0106d0e1-3e8c-4ba5-a40f-01b9bcda28c7
+VITE_APP_BANK_API_KEY=
