--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.5.2",
+    "react-multi-carousel": "^2.8.4",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-use-googlelogin": "^0.12.5",
