--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@react-oauth/google": "0.7.3",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
