--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VITE_APP_BASE_URL = https://eazyswap.herokuapp.com
 
 VITE_APP_BANK_API_KEY = PUBK_LIVE_0106d0e1-3e8c-4ba5-a40f-01b9bcda28c7
+
+VITE_GOOGLE_API_KEY = "802643163548-8um3vi6jea67go2j5kib1bt7l5ji0mv4.apps.googleusercontent.com"
+
